--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-PyQt6
-watchfiles
-pywin32
-toml
-pyinstaller
+pywin32>=306
+PyQt6>=6.6.1
+watchfiles>=0.21.0
+toml>=0.10.2
+typing-extensions>=4.9.0
+pyinstaller>=6.3.0
